# SWEBERT

./: .gitignore  README.md  main.py  pyproject.toml
data/: training_data.csv
