[project]
name = "SWEBERT"
version = "0.1.0"
description = "Software Industry related text classifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
